# wgpu_node_graph

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  main.rs  nodes.rs  nodes_context_menu.rs  preview.rs  search.rs
src/nodes/: data.rs  template.rs
src/preview/: gl.rs  shape.rs  wgpu.rs
