[package]
name = "wgpu_node_graph"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
strip = true
lto = "thin"
panic = 'abort'
opt-level = 3
codegen-units = 1

[target.'cfg(not(target_family="wasm"))'.profile.dev.package."*"]
opt-level = 3

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
egui_extras = "0.24.0"
serde = { version = "1.0.193", features = ["derive"] }
eframe = { version = "0.24.0", features = ["wgpu", "persistence"] }
tokio = { version = "1.34.0", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
egui_node_graph = { version = "0.4.0", features = [
    "persistence",
], git = "https://github.com/SergioRibera/egui_node_graph", branch = "dev" }
